fix: 관리자 대시보드 코드 리뷰 반영
- 페이지 파라미터 안전 범위 보정 (page >= 0, 1 <= size <= 100)
- 매장 검색 키워드 trim 처리 및 빈 문자열 보정
- DashboardStats → DashboardStatsResponse DTO 네이밍 컨벤션 적용
- AdminExceptionHandler에 HTTP status 코드 설정 (400/500)
- 정지/차단된 관리자 계정 로그인 차단 (isActive 검증 추가)
- 탈퇴 시 adminPassword null 처리
- CDN 리소스에 SRI integrity 속성 추가
- 사이드바 로고 링크 th:href 표현식으로 통일
- 테이블 행 클릭 키보드 접근성 개선 (tabindex, onkeydown)
- 사용자 상세 페이지 정지 기간 토글 스크립트 추가

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>